change Contact to smart comonent and Online state modifier

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -22,6 +22,10 @@
 }
 
 /* Status text */
+.Contact .status {
+    cursor: pointer;
+}
+
 .Contact .status .status-text {
     color: #999;
     margin: 0;
